--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -10,7 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
-<link rel='import' href='./pro-i18ned-component.html'>
+<link rel='import' href='../custom_components/pro-i18ned-component.html'>
 
 <dom-module id="my-view1">
   <template>
