Refactor: removed iron-pages and added import to fix views from not showing up

--- a/src/components-import.html
+++ b/src/components-import.html
@@ -1,4 +1,4 @@
-<!-- Bower Components -->
+<!-- Bower Google Components -->
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
@@ -11,9 +11,16 @@
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+
+<!-- Bower External Components-->
 <link rel="import" href="../bower_components/iron-grid/iron-grid.html">
 
 <!-- Custom Components -->
 <link rel="import" href="../custom_components/pro-grid-element.html">
 <link rel="import" href="../custom_components/pro-language-switcher.html">
 <link rel="import" href="my-icons.html">
+
+<link rel="import" href="my-view1.html">
+<link rel="import" href="my-view2.html">
+<link rel="import" href="my-view3.html">
+<link rel="import" href="my-view404.html">
