--- a/src/my-app.html
+++ b/src/my-app.html
@@ -13,54 +13,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="my-app">
   <template>
 
-    <app-location route="{{route}}"></app-location>
-    <app-route
-        route="{{route}}"
-        pattern="/:page"
-        data="{{routeData}}"
-        tail="{{subroute}}"></app-route>
+    <!-- Where header should be -->
+    <app-drawer swipe-open align="right">
+      scroll-selected: {{scrollSelected}}
+    </app-drawer>
 
-    <iron-pages
-        selected="[[page]]"
-        attr-for-selected="name"
-        fallback-selection="view404"
-        role="main">
-      <my-view1 name="view1"></my-view1>
-      <my-view2 name="view2"></my-view2>
-      <my-view3 name="view3"></my-view3>
-      <my-view404 name="view404"></my-view404>
-    </iron-pages>
+      <my-view1></my-view1>
+      <my-view2></my-view2>
+      <my-view3></my-view3>
+      <my-view404></my-view404>
   </template>
 
   <script>
     Polymer({
       is: 'my-app',
-
-      properties: {
-        page: {
-          type: String,
-          reflectToAttribute: true,
-          observer: '_pageChanged'
-        }
-      },
-
-      observers: [
-        '_routePageChanged(routeData.page)'
-      ],
-
-      _routePageChanged: function(page) {
-        this.page = page || 'view1';
-      },
-
-      _pageChanged: function(page) {
-        // Load page import on demand. Show 404 page if fails
-        var resolvedPageUrl = this.resolveUrl('my-' + page + '.html');
-        this.importHref(resolvedPageUrl, null, this._showPage404, true);
-      },
-
-      _showPage404: function() {
-        this.page = 'view404';
-      },
 
       created: function() {
         // http://stackoverflow.com/questions/11582512/how-to-get-url-parameters-with-javascript
