Refactor: removed log in iron-grid

--- a/src/my-view2.html
+++ b/src/my-view2.html
@@ -30,7 +30,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     screenSize = {{screenSize}}
 
-    <iron-grid log current-screenformat="{{screenSize}}">
+    <iron-grid current-screenformat="{{screenSize}}">
 
         <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
         <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
