Fix - leave app-drawer opened

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -14,7 +14,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
 
     <!-- Where header should be -->
-    <app-drawer swipe-open align="right">
+    <app-drawer swipe-open opened align="right">
       scroll-selected: {{scrollSelected}}
     </app-drawer>
 
