--- a/src/components-import.html
+++ b/src/components-import.html
@@ -10,6 +10,7 @@
 <link rel="import" href="../bower_components/app-route/app-route.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../bower_components/iron-scroll-threshold/iron-scroll-threshold.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 
 <!-- Bower External Components-->
