--- a/src/my-app.html
+++ b/src/my-app.html
@@ -14,13 +14,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
 
     <!-- Where header should be -->
-    <app-drawer swipe-open opened align="right">
-    </app-drawer>
+    <!--<app-drawer swipe-open opened align="right">
+    </app-drawer>-->
 
-      <my-view1></my-view1>
-      <my-view2></my-view2>
-      <my-view3></my-view3>
-      <my-view404></my-view404>
+    <my-view1></my-view1>
+    <my-view2></my-view2>
+    <my-view3></my-view3>
+    <my-view404></my-view404>
   </template>
 
   <script>
