fix - removed iron-scroll-threshold

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -14,8 +14,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
 
     <!-- Where header should be -->
-    <!--<app-drawer swipe-open opened align="right">
-    </app-drawer>-->
+    <app-drawer swipe-open opened align="right">
+    </app-drawer>
 
     <my-view1></my-view1>
     <my-view2></my-view2>
