--- a/src/my-view2.html
+++ b/src/my-view2.html
@@ -30,57 +30,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     screenSize = {{screenSize}}
 
-    <iron-scroll-threshold
-    id="ist"
-    on-lower-threshold="asdf"
-    lower-threshold="1"
-    scroll-target="ironGridTarget">
-    <iron-grid id="ironGridTarget" current-screenformat="{{screenSize}}">
+    <iron-grid current-screenformat="{{screenSize}}">
 
         <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-                <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-                <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-                <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-                <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-                <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-        <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
-                <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
         <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
         <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
         <pro-grid-element class="xs12 s6 m3"></pro-grid-element>
 
     </iron-grid>
-    </iron-scroll-threshold>
 
   </template>
 
   <script>
     Polymer({
-      is: 'my-view2',
-
-      asdf: function() {
-        debugger;
-        console.log('End of view 2 reached');
-
-        this.$.ist.clearTriggers();
-      }
+      is: 'my-view2'
     });
   </script>
 </dom-module>
