fix - added missing revealing module around some js

--- a/custom_components/pro-grid-element.html
+++ b/custom_components/pro-grid-element.html
@@ -30,8 +30,12 @@
 
   </template>
   <script>
-    Polymer({
-      is: 'pro-grid-element'
-    });
+     (function() {
+      'use strict';
+
+      Polymer({
+        is: 'pro-grid-element'
+      });
+    })();
   </script>
 </dom-module>
