--- a/custom_components/pro-language-switcher.html
+++ b/custom_components/pro-language-switcher.html
@@ -10,6 +10,9 @@
   </template>
 
   <script>
+  (function() {
+    'use strict';
+
     Polymer({
       is: 'pro-language-switcher',
 
@@ -26,5 +29,6 @@
         }
       }
     });
+  })();
   </script>
 </dom-module>
