feat - imported new components

--- a/src/components-import.html
+++ b/src/components-import.html
@@ -20,7 +20,13 @@
 <link rel="import" href="../custom_components/pro-language-switcher.html">
 <link rel="import" href="my-icons.html">
 
+<link rel="import" href="../custom_components/pro-welcome.html">
+<link rel="import" href="../custom_components/pro-profile.html">
+<link rel="import" href="../custom_components/pro-experience.html">
+<link rel="import" href="../custom_components/pro-journeys.html">
+<link rel="import" href="../custom_components/pro-contact.html">
+<link rel="import" href="../custom_components/pro-feedback.html">
+
 <link rel="import" href="my-view1.html">
 <link rel="import" href="my-view2.html">
 <link rel="import" href="my-view3.html">
-<link rel="import" href="my-view404.html">
