--- a/src/my-app.html
+++ b/src/my-app.html
@@ -38,12 +38,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <app-drawer swipe-open opened align="right">
     </app-drawer>
 
-    <my-view1 class="fullViewportHeight v1"></my-view1>
-    <my-view2 class="fullViewportHeight v2"></my-view2>
-    <my-view2 class="fullViewportHeight v3"></my-view2>
-    <my-view2 class="fullViewportHeight v4"></my-view2>
-    <my-view3 class="fullViewportHeight v5"></my-view3>
-    <my-view404 class="fullViewportHeight"></my-view404>
+    <pro-welcome class="fullViewportHeight v1"></pro-welcome>
+    <pro-profile class="fullViewportHeight v2"></pro-profile>
+    <pro-experience class="fullViewportHeight v3"></pro-experience>
+    <pro-journeys class="fullViewportHeight v4"></pro-journeys>
+    <pro-contact class="fullViewportHeight v5"></pro-contact>
+    <pro-feedback></pro-feedback>
+    <my-view2 class="fullViewportHeight v6"></my-view2>
+    <my-view3 class="fullViewportHeight v7"></my-view3>
   </template>
 
   <script>
