feat - added welcome video

--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -1,20 +1,21 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../src/shared-styles.html">
-<link rel='import' href='pro-i18ned-component.html'>
 
 <dom-module id="pro-welcome">
   <template>
     <style include="shared-styles">
       :host {
         display: block;
-        padding: 10px;
+        margin-left: -405px;
+        overflow: hidden;
       }
     </style>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <video height="100%" autoplay loop>
+      <source src="../src/343378693.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
 
-    <pro-i18ned-component></pro-i18ned-component>
-    <pro-language-switcher></pro-language-switcher>
   </template>
 
   <script>
