--- a/src/my-app.html
+++ b/src/my-app.html
@@ -12,9 +12,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <dom-module id="my-app">
   <style>
-  .fullViewportHeight{
+  .fullVhPlusPadding{
     min-height: 80vh;
     padding: 10vh 0;
+  }
+  .fullVh{
+    height: 100vh;
   }
   .v1{
     background-color: #99D8D8;
@@ -31,21 +34,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   .v5{
     background-color: #6D4C9B;
   }
+  .appDrawer{
+    z-index: 1
+  }
   </style>
   <template>
 
     <!-- Where header should be -->
-    <app-drawer swipe-open opened align="right">
+    <app-drawer swipe-open align="right" class="appDrawer">
     </app-drawer>
 
-    <pro-welcome class="fullViewportHeight v1"></pro-welcome>
-    <pro-profile class="fullViewportHeight v2"></pro-profile>
-    <pro-experience class="fullViewportHeight v3"></pro-experience>
-    <pro-journeys class="fullViewportHeight v4"></pro-journeys>
-    <pro-contact class="fullViewportHeight v5"></pro-contact>
+    <pro-welcome class="fullVh v1"></pro-welcome>
+    <pro-profile class="fullVhPlusPadding v2"></pro-profile>
+    <pro-experience class="fullVhPlusPadding v3"></pro-experience>
+    <pro-journeys class="fullVhPlusPadding v4"></pro-journeys>
+    <pro-contact class="fullVhPlusPadding v5"></pro-contact>
     <pro-feedback></pro-feedback>
-    <my-view2 class="fullViewportHeight v6"></my-view2>
-    <my-view3 class="fullViewportHeight v7"></my-view3>
+    <my-view2 class="fullVhPlusPadding v6"></my-view2>
+    <my-view3 class="fullVhPlusPadding v7"></my-view3>
   </template>
 
   <script>
