fix - updated background colors for sections

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -20,19 +20,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     height: 100vh;
   }
   .v1{
-    background-color: #99D8D8;
+    background-color: #dddddd;
+    /*background-color: #99D8D8;*/
   }
   .v2{
-    background-color: #8178A8;
+    /*background-color: #8178A8;*/
   }
   .v3{
-    background-color: #FCC3A5;
+    /*background-color: #FCC3A5;*/
   }
   .v4{
-    background-color: #66C5CC;
+    /*background-color: #66C5CC;*/
   }
   .v5{
-    background-color: #6D4C9B;
+    /*background-color: #6D4C9B;*/
   }
   .appDrawer{
     z-index: 1
@@ -44,14 +45,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <app-drawer swipe-open align="right" class="appDrawer">
     </app-drawer>
 
-    <pro-welcome class="fullVh v1"></pro-welcome>
-    <pro-profile class="fullVhPlusPadding v2"></pro-profile>
-    <pro-experience class="fullVhPlusPadding v3"></pro-experience>
-    <pro-journeys class="fullVhPlusPadding v4"></pro-journeys>
-    <pro-contact class="fullVhPlusPadding v5"></pro-contact>
+    <pro-welcome class="fullVh"></pro-welcome>
+    <pro-profile class="fullVhPlusPadding v1"></pro-profile>
+    <pro-experience class="fullVhPlusPadding"></pro-experience>
+    <pro-journeys class="fullVhPlusPadding v1"></pro-journeys>
+    <pro-contact class="fullVhPlusPadding"></pro-contact>
     <pro-feedback></pro-feedback>
-    <my-view2 class="fullVhPlusPadding v6"></my-view2>
-    <my-view3 class="fullVhPlusPadding v7"></my-view3>
+    <my-view2 class="fullVhPlusPadding v1"></my-view2>
+    <my-view3 class="fullVhPlusPadding"></my-view3>
   </template>
 
   <script>
