fix - es6 to es5 and removed unexisting fragment to be able to upload to firebase

--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -34,7 +34,7 @@
 
         attached: function() {
           this.set('noBackground', true);
-          let self = this;
+          var self = this;
 
           if (!this.queryMatches) {
             this.setBackground();
