--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -6,15 +6,24 @@
     <style include="shared-styles">
       :host {
         display: block;
+        overflow: hidden;
       }
       .videoCenter{
-        overflow: hidden;
         margin-top: calc(100vh - 1080px);
         margin-left: calc(100% - 1920px);
+      }
+      .imageCenter{
+        height: 100vh;
+        margin-left: calc(50% - 492px);
+        /* 985 / 2 = 492 */
       }
     </style>
 
     <iron-media-query query="(min-width: 600px)" query-matches="{{queryMatches}}"></iron-media-query>
+
+    <template is="dom-if" if="{{!queryMatches}}">
+      <img class="imageCenter" src="../src/kitsune.jpg" alt="">
+    </template>
 
     <template is="dom-if" if="{{queryMatches}}">
       <video class="videoCenter" autoplay loop>
@@ -30,25 +39,7 @@
       'use strict';
 
       Polymer({
-        is: 'pro-welcome',
-
-        attached: function() {
-          this.set('noBackground', true);
-          var self = this;
-
-          if (!this.queryMatches) {
-            this.setBackground();
-          }
-
-          window.onresize = function(ev) {
-            window.innerWidth < 600 && self.noBackground && self.setBackground();
-          }
-        },
-
-        setBackground: function() {
-          this.set('noBackground', false);
-          document.body.style.background = "url('../src/kitsune.jpg') no-repeat";
-        }
+        is: 'pro-welcome'
       });
     })();
   </script>
