fix - now properly centers when the viewport height is less than 1080p

--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -14,7 +14,7 @@
       }
       .imageCenter{
         height: 100vh;
-        margin-left: calc(50% - 492px);
+        margin-left: calc(50% - 50vh);
         /* 985 / 2 = 492 */
       }
     </style>
