feat - commented unfinished sections and added a footer

--- a/src/components-import.html
+++ b/src/components-import.html
@@ -26,6 +26,7 @@
 <link rel="import" href="../custom_components/pro-journeys.html">
 <link rel="import" href="../custom_components/pro-contact.html">
 <link rel="import" href="../custom_components/pro-feedback.html">
+<link rel="import" href="../custom_components/pro-footer.html">
 
 <link rel="import" href="my-view1.html">
 <link rel="import" href="my-view2.html">
