fix - refactored possible background colors, changed section padding and minimum height

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -13,8 +13,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="my-app">
   <style>
   .fullVhPlusPadding{
-    min-height: 80vh;
-    padding: 10vh 0;
+    padding: 15vh 0;
   }
   .fullVh{
     height: 100vh;
@@ -22,17 +21,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   .v1{
     background-color: #dddddd;
     /*background-color: #99D8D8;*/
-  }
-  .v2{
     /*background-color: #8178A8;*/
-  }
-  .v3{
     /*background-color: #FCC3A5;*/
-  }
-  .v4{
     /*background-color: #66C5CC;*/
-  }
-  .v5{
     /*background-color: #6D4C9B;*/
   }
   .appDrawer{
@@ -46,12 +37,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <pro-welcome class="fullVh"></pro-welcome>
     <pro-profile class="fullVhPlusPadding v1"></pro-profile>
-    <pro-experience class="fullVhPlusPadding"></pro-experience>
-    <pro-journeys class="fullVhPlusPadding v1"></pro-journeys>
-    <pro-contact class="fullVhPlusPadding"></pro-contact>
-    <pro-feedback></pro-feedback>
-    <my-view2 class="fullVhPlusPadding v1"></my-view2>
-    <my-view3 class="fullVhPlusPadding"></my-view3>
+    <!--<pro-experience class="fullVhPlusPadding"></pro-experience>-->
+    <!--<pro-journeys class="fullVhPlusPadding v1"></pro-journeys>-->
+    <!--<pro-contact class="fullVhPlusPadding"></pro-contact>-->
+    <!--<pro-feedback></pro-feedback>-->
+    <!--<my-view2 class="fullVhPlusPadding v1"></my-view2>-->
+    <!--<my-view3 class="fullVhPlusPadding"></my-view3>-->
+    <pro-footer></pro-footer>
   </template>
 
   <script>
