--- a/custom_components/pro-profile.html
+++ b/custom_components/pro-profile.html
@@ -49,12 +49,12 @@
       @media (min-width: 1300px) {
         .img {
           margin-left: 20%;
-          width: 20%;
           width: 40vh;
         }
         .text {
           margin-left: 20%;
           margin-right: 20%;
+          min-height: 40vh;
         }
       }
     </style>
