feat - added pro-section-header to pro-profile

--- a/custom_components/pro-profile.html
+++ b/custom_components/pro-profile.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../src/shared-styles.html">
 <link rel='import' href='./pro-i18n-behaviour.html'>
+<link rel='import' href='./pro-section-header.html'>
 
 <dom-module id="pro-profile">
   <template>
@@ -60,6 +61,7 @@
       }
     </style>
 
+    <pro-section-header text="{{t('pro-profile-header')}}"></pro-section-header>
     <img src="../src/kitsune.jpg" alt="profile picture" class="img">
     <div class="text">
       <h2 class="textHeader">Héctor Moreno Cervera</h2>
@@ -81,6 +83,9 @@
         created: function() {
           this.appendLocale('es', 'pro-profile-about-me', 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit essecillumdolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.');
           this.appendLocale('en', 'pro-profile-about-me', 'TRANSLATED Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit essecillumdolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.');
+
+          this.appendLocale('es', 'pro-profile-header', 'Perfil');
+          this.appendLocale('en', 'pro-profile-header', 'About me');
         }
       });
     })();
