refactor - some sections uncommented and renamed css class

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -12,7 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <dom-module id="my-app">
   <style>
-  .fullVhPlusPadding{
+  .sectionPadding{
     padding: 15vh 0;
   }
   .fullVh{
@@ -37,14 +37,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="sections">
       <pro-welcome class="fullVh"></pro-welcome>
-      <pro-profile class="fullVhPlusPadding"></pro-profile>
+      <pro-profile class="sectionPadding"></pro-profile>
+      <pro-experience class="sectionPadding"></pro-experience>
+      <pro-journeys class="sectionPadding"></pro-journeys>
+      <pro-contact class="sectionPadding"></pro-contact>
     </div>
-    <!--<pro-experience class="fullVhPlusPadding"></pro-experience>-->
-    <!--<pro-journeys class="fullVhPlusPadding v1"></pro-journeys>-->
-    <!--<pro-contact class="fullVhPlusPadding"></pro-contact>-->
+
     <!--<pro-feedback></pro-feedback>-->
-    <!--<my-view2 class="fullVhPlusPadding v1"></my-view2>-->
-    <!--<my-view3 class="fullVhPlusPadding"></my-view3>-->
+
     <pro-footer></pro-footer>
   </template>
 
