--- a/custom_components/pro-journeys.html
+++ b/custom_components/pro-journeys.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../src/shared-styles.html">
 <link rel='import' href='pro-i18ned-component.html'>
 <link rel='import' href='./pro-section-header.html'>
-
+<link rel='import' href='./pro-journey.html'>
 
 <dom-module id="pro-journeys">
   <template>
